kubernetes/apps/radio/meshmonitor/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: meshmonitor
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - meshmonitor.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: meshmonitor
          port: 80
